--- a/gb/22/10/24/n13851854.md
+++ b/gb/22/10/24/n13851854.md
@@ -1,64 +1,54 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>缺工严重 福和会邀产官学谈对策</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/10/id13851855-581772-600x400.jpg" />
 <h6>福和会举办论坛，邀请专家学者、政府单位、产业界人士共商解决台湾严重缺工问题之对策。（王志清／大纪元）
 </h6>
 <hr>
-<p>【大纪元2022年10月24日讯】（大纪元记者王志清 台湾台北报导）台湾由于产业发展，相关<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%B3%E5%8A%A8.md#1">劳动</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%8A%9B.md#1">人力</a>需求大增，加上近年来台湾少子化问题严峻，导致各产业严重<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BC%BA%E5%B7%A5.md#1">缺工</a>，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A6%8F%E5%92%8C%E4%BC%9A.md#1">福和会</a>日前举办论坛，邀请专家学者、政府单位、业界人士等参与，共同探讨如何应对台湾缺用工问题，找出解方。</p>
-<p>国发会<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%8A%9B.md#1">人力</a>发展处处长林至美在论坛上说明，近两年国内<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BC%BA%E5%B7%A5.md#1">缺工</a>人数已逾25万，到了2030年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%B3%E5%8A%A8.md#1">劳动</a>力缺口将会扩大到40万。对此，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A6%8F%E5%92%8C%E4%BC%9A.md#1">福和会</a>理事长林逸民表示，福和会期待ㄒ湾能透过立法引进更多国外的劳动力，解决当务之急。</p>
+<p>【大纪元2022年10月24日讯】（大纪元记者王志清 台湾台北报导）台湾由于产业发展，相关劳动人力需求大增，加上近年来台湾少子化问题严峻，导致各产业严重缺工，福和会日前举办论坛，邀请专家学者、政府单位、业界人士等参与，共同探讨如何应对台湾缺用工问题，找出解方。</p>
+<p>国发会人力发展处处长林至美在论坛上说明，近两年国内缺工人数已逾25万，到了2030年劳动力缺口将会扩大到40万。对此，福和会理事长林逸民表示，福和会期待ㄒ湾能透过立法引进更多国外的劳动力，解决当务之急。</p>
 <p>高雄大学工学院副院长黄忠发表示，营建业缺工一方面是需求端快速增加，包括大量的公共建设工程、都更建筑工程；另一方面是年轻人学术与实际工作的落差，大部分年轻人偏好升学之途，太晚投入就业，营造业工作环境的困难与艰辛也是主因。</p>
 <p>设计包装业者曹仲标与医材业者蔡幸君则谈到相关法规的影响，曹仲标认为一例一休制度让劳动力需求密集的传统产业，调配人力的空间大大降低；蔡幸君则呼吁政府在医材相关法令上有所松绑，在科技时代多元的分工中，很多环节不再与证照要求的领域相关，用旧法规套新的产业工法，就会让很多原本可用的人力用不上。</p>
 <p>农业加工业者余兆丰提到，青年不愿投入劳动工作是重要因素之一，很多青农返乡他们更多的是想从事经营管理工作，而一旦他们成立了事业体还是会面临找不到工人的问题，如果他们也能愿意一部分投入劳务工作，情形就会有改善。</p>
 <p>林至美表示，政府解决劳工问题方面，近年有些作法确实发挥作用，如前教育部松绑语言能力测验，先工作、先进来，一年之后再测定语言能力；在学位要求方面，现在只要念两年念到副学士，不必四年到学士毕业，就能留在台湾做技术工作。在移工方面，劳动部已订定新办法，从现有的70几万名外籍人力中，筛选技术人力作为技术移民，这些人已经工作12年，是有经验的师傅人力，把他们留下，勿让台湾总是成为帮其他国家培养人力的跳板。◇</p>
 <p>责任编辑：晓玫</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/27/n13789775.md#1">美国餐饮业缺工 珍奶业者急推点餐自动化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/19/n13805875.md#1">缺工潮浮现 人力银行：营建工人日薪4千才有诱因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/30/n13813599.md#1">补助缺工产业 郑运鹏：延续政策做更大遮雨棚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/19/n13828406.md#1">9月缺工百万人史上最高 科技人才最抢手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/23/n13830620.md#1">台湾面临缺工浪潮 港澳人才成延揽目标</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/3/n13838079.md#1">【科技业/缺工潮】台大院长：台湾聚才优势正消逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/17/n13847348.md#1">台旅游业缺工 交部劳部专案媒合人力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949523.md#1">高雄399通勤月票 7月起纳台铁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949522.md#1">移工留才久用方案 15日起增列屠宰业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949521.md#1">核二二号机除役 立委：不用过度担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/27/n13789775.md#1">美国餐饮业缺工 珍奶业者急推点餐自动化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/19/n13805875.md#1">缺工潮浮现 人力银行：营建工人日薪4千才有诱因</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/30/n13813599.md#1">补助缺工产业 郑运鹏：延续政策做更大遮雨棚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/19/n13828406.md#1">9月缺工百万人史上最高 科技人才最抢手</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/23/n13830620.md#1">台湾面临缺工浪潮 港澳人才成延揽目标</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/3/n13838079.md#1">【科技业/缺工潮】台大院长：台湾聚才优势正消逝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/17/n13847348.md#1">台旅游业缺工 交部劳部专案媒合人力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304071.md#1">加拿大驻台办：成为GCTF伙伴 致力台海和平</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304016.md#1">奥运会上台湾球迷声援海报遭抢 台外交部谴责</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303731.md#1">首届高龄健康博览会 智慧科技抢攻银发商机</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/27/n10515765.md#1" target="_blank">孙盛起：自己选择的路，只好用上吊绳走完</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/23/n11890264.md#1" target="_blank">《转法轮》为波兰青年打造全新的生命</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/25/n10588772.md#1" target="_blank">广州市“李一哲”炮打文革的闹剧</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/20/n11267496.md#1" target="_blank">少年心声：你若心里难受 就请看《转法轮》</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949307.md#1">【中国禁闻】中共新一届政府班子出炉 民众看衰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949309.md#1">【全球新闻】法国参议院通过养老金改革法案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13948144.md#1">【新闻看点】李强如何被习看中 习李配能走多远</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947628.md#1">李强任总理 3票反对8票弃权 曾因封城遭诟病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947818.md#1">赵立坚现身中越边境刷油漆 引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947637.md#1">分析：中南海新“习李配”对经济的影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947566.md#1">关晓彤零遮掩买早餐 与店员逗趣对话笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948769.md#1">梁朝伟亚洲电影大奖封帝 刘嘉玲打开名单惊呆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947592.md#1">消失7个月 26岁男星蒋智豪确诊肺癌晚期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948798.md#1">“什么戏都想演” 洪金宝叹演动作片难糊口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947035.md#1">抗癌有最佳时间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946765.md#1">一房二用 10种隐形床打造复合空间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948420.md#1">退休的最大挑战是什么？哈佛85年研究释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943987.md#1">药量过重？ 医师教你减轻服药的潜在危害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310055.md#1">【新闻看点】张又侠表忠是求饶 秦刚再见不到？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309753.md#1">【新闻大家谈】惊天案：央企卖尸体 党媒造反？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/24/n13851854.htm">缺工严重 福和会邀产官学谈对策</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/24/n13851854.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/24/n13851854.htm">缺工严重 福和会邀产官学谈对策</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/10/24/n13851854.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
